--- a/src/app/styles/fonts/stylesheet.css
+++ b/src/app/styles/fonts/stylesheet.css
@@ -1,208 +1,223 @@
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-ExtraBold.eot');
-    src: url('JetBrainsMono-ExtraBold.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-ExtraBold.woff2') format('woff2'),
-        url('JetBrainsMono-ExtraBold.woff') format('woff'),
-        url('JetBrainsMono-ExtraBold.ttf') format('truetype'),
-        url('JetBrainsMono-ExtraBold.svg#JetBrainsMono-ExtraBold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-ExtraBold.eot');
+	src:
+		url('JetBrainsMono-ExtraBold.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-ExtraBold.woff2') format('woff2'),
+		url('JetBrainsMono-ExtraBold.woff') format('woff'),
+		url('JetBrainsMono-ExtraBold.ttf') format('truetype'),
+		url('JetBrainsMono-ExtraBold.svg#JetBrainsMono-ExtraBold') format('svg');
+	font-weight: bold;
+	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-Bold.eot');
-    src: url('JetBrainsMono-Bold.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-Bold.woff2') format('woff2'),
-        url('JetBrainsMono-Bold.woff') format('woff'),
-        url('JetBrainsMono-Bold.ttf') format('truetype'),
-        url('JetBrainsMono-Bold.svg#JetBrainsMono-Bold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-Bold.eot');
+	src:
+		url('JetBrainsMono-Bold.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-Bold.woff2') format('woff2'),
+		url('JetBrainsMono-Bold.woff') format('woff'),
+		url('JetBrainsMono-Bold.ttf') format('truetype'),
+		url('JetBrainsMono-Bold.svg#JetBrainsMono-Bold') format('svg');
+	font-weight: bold;
+	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-BoldItalic.eot');
-    src: url('JetBrainsMono-BoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-BoldItalic.woff2') format('woff2'),
-        url('JetBrainsMono-BoldItalic.woff') format('woff'),
-        url('JetBrainsMono-BoldItalic.ttf') format('truetype'),
-        url('JetBrainsMono-BoldItalic.svg#JetBrainsMono-BoldItalic') format('svg');
-    font-weight: bold;
-    font-style: italic;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-BoldItalic.eot');
+	src:
+		url('JetBrainsMono-BoldItalic.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-BoldItalic.woff2') format('woff2'),
+		url('JetBrainsMono-BoldItalic.woff') format('woff'),
+		url('JetBrainsMono-BoldItalic.ttf') format('truetype'),
+		url('JetBrainsMono-BoldItalic.svg#JetBrainsMono-BoldItalic') format('svg');
+	font-weight: bold;
+	font-style: italic;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-ExtraLight.eot');
-    src: url('JetBrainsMono-ExtraLight.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-ExtraLight.woff2') format('woff2'),
-        url('JetBrainsMono-ExtraLight.woff') format('woff'),
-        url('JetBrainsMono-ExtraLight.ttf') format('truetype'),
-        url('JetBrainsMono-ExtraLight.svg#JetBrainsMono-ExtraLight') format('svg');
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-ExtraLight.eot');
+	src:
+		url('JetBrainsMono-ExtraLight.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-ExtraLight.woff2') format('woff2'),
+		url('JetBrainsMono-ExtraLight.woff') format('woff'),
+		url('JetBrainsMono-ExtraLight.ttf') format('truetype'),
+		url('JetBrainsMono-ExtraLight.svg#JetBrainsMono-ExtraLight') format('svg');
+	font-weight: 200;
+	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-ExtraBoldItalic.eot');
-    src: url('JetBrainsMono-ExtraBoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-ExtraBoldItalic.woff2') format('woff2'),
-        url('JetBrainsMono-ExtraBoldItalic.woff') format('woff'),
-        url('JetBrainsMono-ExtraBoldItalic.ttf') format('truetype'),
-        url('JetBrainsMono-ExtraBoldItalic.svg#JetBrainsMono-ExtraBoldItalic') format('svg');
-    font-weight: bold;
-    font-style: italic;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-ExtraBoldItalic.eot');
+	src:
+		url('JetBrainsMono-ExtraBoldItalic.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-ExtraBoldItalic.woff2') format('woff2'),
+		url('JetBrainsMono-ExtraBoldItalic.woff') format('woff'),
+		url('JetBrainsMono-ExtraBoldItalic.ttf') format('truetype'),
+		url('JetBrainsMono-ExtraBoldItalic.svg#JetBrainsMono-ExtraBoldItalic') format('svg');
+	font-weight: bold;
+	font-style: italic;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-ExtraLightItalic.eot');
-    src: url('JetBrainsMono-ExtraLightItalic.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-ExtraLightItalic.woff2') format('woff2'),
-        url('JetBrainsMono-ExtraLightItalic.woff') format('woff'),
-        url('JetBrainsMono-ExtraLightItalic.ttf') format('truetype'),
-        url('JetBrainsMono-ExtraLightItalic.svg#JetBrainsMono-ExtraLightItalic') format('svg');
-    font-weight: 200;
-    font-style: italic;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-ExtraLightItalic.eot');
+	src:
+		url('JetBrainsMono-ExtraLightItalic.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-ExtraLightItalic.woff2') format('woff2'),
+		url('JetBrainsMono-ExtraLightItalic.woff') format('woff'),
+		url('JetBrainsMono-ExtraLightItalic.ttf') format('truetype'),
+		url('JetBrainsMono-ExtraLightItalic.svg#JetBrainsMono-ExtraLightItalic') format('svg');
+	font-weight: 200;
+	font-style: italic;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-Light.eot');
-    src: url('JetBrainsMono-Light.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-Light.woff2') format('woff2'),
-        url('JetBrainsMono-Light.woff') format('woff'),
-        url('JetBrainsMono-Light.ttf') format('truetype'),
-        url('JetBrainsMono-Light.svg#JetBrainsMono-Light') format('svg');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-Light.eot');
+	src:
+		url('JetBrainsMono-Light.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-Light.woff2') format('woff2'),
+		url('JetBrainsMono-Light.woff') format('woff'),
+		url('JetBrainsMono-Light.ttf') format('truetype'),
+		url('JetBrainsMono-Light.svg#JetBrainsMono-Light') format('svg');
+	font-weight: 300;
+	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-Italic.eot');
-    src: url('JetBrainsMono-Italic.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-Italic.woff2') format('woff2'),
-        url('JetBrainsMono-Italic.woff') format('woff'),
-        url('JetBrainsMono-Italic.ttf') format('truetype'),
-        url('JetBrainsMono-Italic.svg#JetBrainsMono-Italic') format('svg');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-Italic.eot');
+	src:
+		url('JetBrainsMono-Italic.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-Italic.woff2') format('woff2'),
+		url('JetBrainsMono-Italic.woff') format('woff'),
+		url('JetBrainsMono-Italic.ttf') format('truetype'),
+		url('JetBrainsMono-Italic.svg#JetBrainsMono-Italic') format('svg');
+	font-weight: normal;
+	font-style: italic;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-Medium.eot');
-    src: url('JetBrainsMono-Medium.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-Medium.woff2') format('woff2'),
-        url('JetBrainsMono-Medium.woff') format('woff'),
-        url('JetBrainsMono-Medium.ttf') format('truetype'),
-        url('JetBrainsMono-Medium.svg#JetBrainsMono-Medium') format('svg');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-Medium.eot');
+	src:
+		url('JetBrainsMono-Medium.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-Medium.woff2') format('woff2'),
+		url('JetBrainsMono-Medium.woff') format('woff'),
+		url('JetBrainsMono-Medium.ttf') format('truetype'),
+		url('JetBrainsMono-Medium.svg#JetBrainsMono-Medium') format('svg');
+	font-weight: 500;
+	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-LightItalic.eot');
-    src: url('JetBrainsMono-LightItalic.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-LightItalic.woff2') format('woff2'),
-        url('JetBrainsMono-LightItalic.woff') format('woff'),
-        url('JetBrainsMono-LightItalic.ttf') format('truetype'),
-        url('JetBrainsMono-LightItalic.svg#JetBrainsMono-LightItalic') format('svg');
-    font-weight: 300;
-    font-style: italic;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-LightItalic.eot');
+	src:
+		url('JetBrainsMono-LightItalic.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-LightItalic.woff2') format('woff2'),
+		url('JetBrainsMono-LightItalic.woff') format('woff'),
+		url('JetBrainsMono-LightItalic.ttf') format('truetype'),
+		url('JetBrainsMono-LightItalic.svg#JetBrainsMono-LightItalic') format('svg');
+	font-weight: 300;
+	font-style: italic;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-Regular.eot');
-    src: url('JetBrainsMono-Regular.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-Regular.woff2') format('woff2'),
-        url('JetBrainsMono-Regular.woff') format('woff'),
-        url('JetBrainsMono-Regular.ttf') format('truetype'),
-        url('JetBrainsMono-Regular.svg#JetBrainsMono-Regular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-Regular.eot');
+	src:
+		url('JetBrainsMono-Regular.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-Regular.woff2') format('woff2'),
+		url('JetBrainsMono-Regular.woff') format('woff'),
+		url('JetBrainsMono-Regular.ttf') format('truetype'),
+		url('JetBrainsMono-Regular.svg#JetBrainsMono-Regular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-SemiBold.eot');
-    src: url('JetBrainsMono-SemiBold.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-SemiBold.woff2') format('woff2'),
-        url('JetBrainsMono-SemiBold.woff') format('woff'),
-        url('JetBrainsMono-SemiBold.ttf') format('truetype'),
-        url('JetBrainsMono-SemiBold.svg#JetBrainsMono-SemiBold') format('svg');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-SemiBold.eot');
+	src:
+		url('JetBrainsMono-SemiBold.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-SemiBold.woff2') format('woff2'),
+		url('JetBrainsMono-SemiBold.woff') format('woff'),
+		url('JetBrainsMono-SemiBold.ttf') format('truetype'),
+		url('JetBrainsMono-SemiBold.svg#JetBrainsMono-SemiBold') format('svg');
+	font-weight: 600;
+	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-MediumItalic.eot');
-    src: url('JetBrainsMono-MediumItalic.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-MediumItalic.woff2') format('woff2'),
-        url('JetBrainsMono-MediumItalic.woff') format('woff'),
-        url('JetBrainsMono-MediumItalic.ttf') format('truetype'),
-        url('JetBrainsMono-MediumItalic.svg#JetBrainsMono-MediumItalic') format('svg');
-    font-weight: 500;
-    font-style: italic;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-MediumItalic.eot');
+	src:
+		url('JetBrainsMono-MediumItalic.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-MediumItalic.woff2') format('woff2'),
+		url('JetBrainsMono-MediumItalic.woff') format('woff'),
+		url('JetBrainsMono-MediumItalic.ttf') format('truetype'),
+		url('JetBrainsMono-MediumItalic.svg#JetBrainsMono-MediumItalic') format('svg');
+	font-weight: 500;
+	font-style: italic;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-SemiBoldItalic.eot');
-    src: url('JetBrainsMono-SemiBoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-SemiBoldItalic.woff2') format('woff2'),
-        url('JetBrainsMono-SemiBoldItalic.woff') format('woff'),
-        url('JetBrainsMono-SemiBoldItalic.ttf') format('truetype'),
-        url('JetBrainsMono-SemiBoldItalic.svg#JetBrainsMono-SemiBoldItalic') format('svg');
-    font-weight: 600;
-    font-style: italic;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-SemiBoldItalic.eot');
+	src:
+		url('JetBrainsMono-SemiBoldItalic.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-SemiBoldItalic.woff2') format('woff2'),
+		url('JetBrainsMono-SemiBoldItalic.woff') format('woff'),
+		url('JetBrainsMono-SemiBoldItalic.ttf') format('truetype'),
+		url('JetBrainsMono-SemiBoldItalic.svg#JetBrainsMono-SemiBoldItalic') format('svg');
+	font-weight: 600;
+	font-style: italic;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-Thin.eot');
-    src: url('JetBrainsMono-Thin.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-Thin.woff2') format('woff2'),
-        url('JetBrainsMono-Thin.woff') format('woff'),
-        url('JetBrainsMono-Thin.ttf') format('truetype'),
-        url('JetBrainsMono-Thin.svg#JetBrainsMono-Thin') format('svg');
-    font-weight: 100;
-    font-style: normal;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-Thin.eot');
+	src:
+		url('JetBrainsMono-Thin.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-Thin.woff2') format('woff2'),
+		url('JetBrainsMono-Thin.woff') format('woff'),
+		url('JetBrainsMono-Thin.ttf') format('truetype'),
+		url('JetBrainsMono-Thin.svg#JetBrainsMono-Thin') format('svg');
+	font-weight: 100;
+	font-style: normal;
+	font-display: swap;
 }
 
 @font-face {
-    font-family: 'JetBrains Mono';
-    src: url('JetBrainsMono-ThinItalic.eot');
-    src: url('JetBrainsMono-ThinItalic.eot?#iefix') format('embedded-opentype'),
-        url('JetBrainsMono-ThinItalic.woff2') format('woff2'),
-        url('JetBrainsMono-ThinItalic.woff') format('woff'),
-        url('JetBrainsMono-ThinItalic.ttf') format('truetype'),
-        url('JetBrainsMono-ThinItalic.svg#JetBrainsMono-ThinItalic') format('svg');
-    font-weight: 100;
-    font-style: italic;
-    font-display: swap;
+	font-family: 'JetBrains Mono';
+	src: url('JetBrainsMono-ThinItalic.eot');
+	src:
+		url('JetBrainsMono-ThinItalic.eot?#iefix') format('embedded-opentype'),
+		url('JetBrainsMono-ThinItalic.woff2') format('woff2'),
+		url('JetBrainsMono-ThinItalic.woff') format('woff'),
+		url('JetBrainsMono-ThinItalic.ttf') format('truetype'),
+		url('JetBrainsMono-ThinItalic.svg#JetBrainsMono-ThinItalic') format('svg');
+	font-weight: 100;
+	font-style: italic;
+	font-display: swap;
 }
-
