--- a/src/shared/ui/AppLink/ui/AppLink.module.scss
+++ b/src/shared/ui/AppLink/ui/AppLink.module.scss
@@ -1,12 +1,11 @@
 .AppLink {
-  transition: all .2s ease-in-out;
+	transition: all 0.2s ease-in-out;
 
-  &:hover {
-    opacity: 0.7;
-  }
+	&:hover {
+		opacity: 0.7;
+	}
 }
 
-
 .active {
-  border-bottom: 1px solid var(--primary-color);
+	border-bottom: 1px solid var(--primary-color);
 }
