--- a/src/pages/MainPage/ui/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage/MainPage.module.scss
@@ -1,2 +1,14 @@
 .MainPage {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.send_btn {
+  margin: 10px auto 0;
+}
+
+.upload {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
