--- a/front/src/features/uploadFiles/ui/UploadFiles/UploadFiles.module.scss
+++ b/front/src/features/uploadFiles/ui/UploadFiles/UploadFiles.module.scss
@@ -14,6 +14,24 @@
 	box-shadow: 0px 48px 35px -48px rgba(0, 0, 0, 0.1);
 	transition: all 0.1s linear;
 
+	&.success {
+		@apply text-green-400 border-green-400;
+		.icon svg {
+			@apply fill-green-400;
+		}
+
+		.text span {
+			@apply text-green-400;
+		}
+
+		&:hover {
+			@apply text-green-500 border-green-500;
+			.icon svg {
+				@apply fill-green-500;
+			}
+		}
+	}
+
 	&:hover {
 		background-color: var(--bg-color-opacity-70);
 		color: var(--primary-color-70);
