--- a/front/src/pages/HistoryPage/ui/HistoryPage/HistoryPage.module.scss
+++ b/front/src/pages/HistoryPage/ui/HistoryPage/HistoryPage.module.scss
@@ -1,2 +1,10 @@
 .HistoryPage {
+  width: 100%;
+  padding: 10px 30px;
+  display: flex;
+  gap: 50px;
+  max-width: 1280px;
+  margin: 0 auto;
+  align-items: baseline;
+  justify-content: space-between;
 }
