--- a/front/src/features/authUser/ui/AuthUser/AuthUser.module.scss
+++ b/front/src/features/authUser/ui/AuthUser/AuthUser.module.scss
@@ -8,6 +8,11 @@
   flex-direction: column;
 }
 
+.link {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .heading {
   margin-bottom: 20px;
   font: var(--font-xl);
